--- a/circle.yml
+++ b/circle.yml
@@ -6,17 +6,15 @@ machine:
 
 dependencies:
   override:
-      - |
-      if [[ ! -f ~/.local/bin/terraform ]]; then
-        mkdir -p ~/.local/bin
-        cd ~/.local/bin
-        wget "https://releases.hashicorp.com/terraform/${TERRAFORM_VER}/terraform_${TERRAFORM_VER}_linux_amd64.zip"
-        unzip *.zip
-        rm *.zip
-      fi
+    - |
+      mkdir -p ~/.local/bin
+      cd ~/.local/bin
+      wget "https://releases.hashicorp.com/terraform/${TERRAFORM_VER}/terraform_${TERRAFORM_VER}_linux_amd64.zip"
+      unzip *.zip
+      rm *.zip
   cache_directories:
     - ~/.local/bin
 
 test:
   override:
-    - echo "test"
+    - terraform plan
