--- a/circle.yml
+++ b/circle.yml
@@ -19,5 +19,10 @@ dependencies:
     - ~/.local/bin
 
 test:
+  pre:
+    - terraform remote config -backend=S3 -backend-config="bucket=terraform" -backend-config="key=terraform.tfstate"
+      terraform remote pull
   override:
     - terraform plan
+  post:
+    - terraform push
